[package]
name = "uly"
version = "1.0.1"
edition = "2021"
description = "Create local Ulysses documents from the terminal"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
clap = { version="3.0.7", features=["derive"]}
fs_extra = "1.2.0"
execute = "0.2.9"